fixed some contrast errors

--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -5,7 +5,7 @@
 }
 
 nav {
-    background-color: rgb(74, 78, 105);
+    background-color: #4a4e69;
 }
 
 nav div {
@@ -55,11 +55,11 @@ nav ul{
 
 nav ul li a.active {
     background-color: rgb(193, 187, 187);
-    color: rgb(74, 78, 105);
+    color: #252732;
 }
 
 nav ul li a:hover{
-    background-color: rgb(129, 135, 170);
+    background-color: #8187aa;
     color: #eee;
 }
 
